@@ -3,5 +3,6 @@
 TESTSUITE_DIR=/$($(dirname $0)/../rules echo-MOZ_TESTDIR 2>/dev/null)
 
 export LC_ALL=en_US.UTF-8
+mkdir -p $(dirname $0)/_results
 
-$TESTSUITE_DIR/run_reftest --own-display --own-session-bus $TESTSUITE_DIR/reftest/tests/layout/reftests/reftest.list
+$TESTSUITE_DIR/run_reftest --own-display --own-session-bus --xunit-file $(dirname $0)/_results/reftest.xml --xunit-name "reftest" $TESTSUITE_DIR/reftest/tests/layout/reftests/reftest.list
