@@ -3,5 +3,6 @@
 TESTSUITE_DIR=/$($(dirname $0)/../rules echo-MOZ_TESTDIR 2>/dev/null)
 
 export LC_ALL=en_US.UTF-8
+mkdir -p $(dirname $0)/_results
 
-$TESTSUITE_DIR/run_xpcshell_tests --own-display --own-session-bus --manifest $TESTSUITE_DIR/xpcshell/tests/xpcshell.ini
+$TESTSUITE_DIR/run_xpcshell_tests --own-display --own-session-bus --xunit-file $(dirname $0)/_results/xpcshell-tests.xml --xunit-suite-name "xpcshell" --manifest $TESTSUITE_DIR/xpcshell/tests/xpcshell.ini
